--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,23 @@
   <script src="js/templates.js"></script>
 
   <!-- SETUP FILES -->
-
+  <script src="js/setup.js"></script>
 
 
   <!-- CONSTRUCTOR FILES -->
+ <script src="js/models/user.model.js"></script>
+ <script src="js/models/post.model.js"></script>
+ <script src="js/models/guess.model.js"></script>
 
+ <script src="js/collections/user.collection.js"></script>
+ <script src="js/collections/post.collection.js"></script>
+ <script src="js/collections/guess.collection.js"></script>
 
+ <script src="js/views/user.view.js"></script>
+ <script src="js/views/post.view.js"></script>
+ <script src="js/views/guess.view.js"></script>
+
+ <script src="js/routers/main.router.js"></script>
 
   <!-- MAIN -->
   <script src="js/main.js"></script>
