Set up general SASS and HTML Installed font-awesome

--- a/app/index.html
+++ b/app/index.html
@@ -3,15 +3,30 @@
 <head>
   <title>Project Name</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto" rel="stylesheet" type="text/css">
+
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/foundation.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
+<div class="wrapper">
+
+  <header>
+    <div class="innerHeader">
+      <div class="logo">
+        <p>Q Pic LOGO</p>
+      </div>
+    </div>
+  </header>
+
   <div class="container">
 
   </div>
+
+</div>
 
   <!-- VENDOR -->
   <script src="js/vendor/jquery.js"></script>
