setting up templates and views for login and leaderboard

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
 
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/foundation.css">
+  <link rel="stylesheet" href="css/vendor/font-awesome.css">
+
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -50,9 +52,10 @@
  <script src="js/collections/post.collection.js"></script>
  <script src="js/collections/guess.collection.js"></script>
 
- <script src="js/views/user.view.js"></script>
- <script src="js/views/post.view.js"></script>
- <script src="js/views/guess.view.js"></script>
+ <script src="js/views/login.view.js"></script>
+ <script src="js/views/main.view.js"></script>
+ <script src="js/views/single.view.js"></script>
+ <script src="js/views/leaderboard.view.js"></script>
 
  <script src="js/routers/main.router.js"></script>
 
