--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/vendor/font-awesome.css">
 
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/vendor/foundation.css">
@@ -23,6 +24,8 @@
   </header>
 
   <div class="container">
+
+
 
   </div>
 
@@ -50,9 +53,11 @@
  <script src="js/collections/post.collection.js"></script>
  <script src="js/collections/guess.collection.js"></script>
 
- <script src="js/views/user.view.js"></script>
- <script src="js/views/post.view.js"></script>
- <script src="js/views/guess.view.js"></script>
+ <script src="js/views/login.view.js"></script>
+ <script src="js/views/main.view.js"></script>
+ <script src="js/views/single.view.js"></script>
+ <script src="js/views/leaderboard.view.js"></script>
+
 
  <script src="js/routers/main.router.js"></script>
 
