Single page view loading on new single view

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,12 @@
       <div class="logo">
         <p>Q Pic LOGO</p>
       </div>
+      <div class="social">
+        <i class="fa fa-facebook-square"></i>
+        <i class="fa fa-twitter-square"></i>
+        <i class="fa fa-apple"></i>
+        <i class="fa fa-envelope-o"></i>
+      </div>
     </div>
   </header>
 
