--- a/app/index.html
+++ b/app/index.html
@@ -50,9 +50,10 @@
  <script src="js/collections/post.collection.js"></script>
  <script src="js/collections/guess.collection.js"></script>
 
- <script src="js/views/user.view.js"></script>
- <script src="js/views/post.view.js"></script>
- <script src="js/views/guess.view.js"></script>
+<script src="js/views/login.view.js"></script>
+<script src="js/views/main.view.js"></script>
+<script src="js/views/single.view.js"></script>
+<script src="js/views/leaderboard.view.js"></script>
 
  <script src="js/routers/main.router.js"></script>
 
