REVISIONS TO main.views AND ITS HANDLEBARS TEMPLATE

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <div class="innerHeader">
       <div class="logo">
         <p>Q Pic LOGO</p>
+        <!-- <i class="fa fa-camera"></i> -->
       </div>
       <div class="social">
         <i class="fa fa-facebook-square"></i>
