--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,9 @@
         <i class="fa fa-apple"></i>
         <i class="fa fa-envelope-o"></i>
       </div>
+      <div class="logoutDiv">
+        <p class="logout" id="logout">Logout</p>
+      </div>
     </div>
   </header>
 
