--- a/app/index.html
+++ b/app/index.html
@@ -2,14 +2,16 @@
 <html>
 
 <head>
-    <title>Project Name</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet|Monofet" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="css/vendor/normalize.css">
-    <link rel="stylesheet" href="css/vendor/foundation.css">
-    <link rel="stylesheet" href="css/vendor/font-awesome.css">
-    <link rel="stylesheet" href="css/main.css">
+    <title>
+        Project Name
+    </title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet" rel="stylesheet" type="text/css">
+    <link href="css/vendor/font-awesome.css" rel="stylesheet">
+    <link href="css/vendor/normalize.css" rel="stylesheet">
+    <link href="css/vendor/foundation.css" rel="stylesheet">
+    <link href="css/vendor/font-awesome.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,24 +19,22 @@
         <header>
             <div class="innerHeader">
                 <div class="logo">
-                    <p>Q<span>pic</span></p>
-                    <i class="fa fa-camera"></i>
+                    <p>
+                        Q<span>pic</span>
+                    </p><i class="fa fa-camera"></i>
                 </div>
             </div>
             <div class="social">
-                <i class="fa fa-facebook-square"></i>
-                <i class="fa fa-twitter-square"></i>
-                <i class="fa fa-apple"></i>
-                <i class="fa fa-envelope-o"></i>
+                <i class="fa fa-facebook-square"></i> <i class="fa fa-twitter-square"></i> <i class="fa fa-apple"></i> <i class="fa fa-envelope-o"></i>
             </div>
+        </header>
     </div>
-    </header>
     <div class="container">
         <div class="logo2">
-            <p>Q<span>pic</span></p>
-            <i class="fa fa-camera"></i>
+            <p>
+                Q<span>pic</span>
+            </p><i class="fa fa-camera"></i>
         </div>
-    </div>
     </div>
     <!-- VENDOR -->
     <script src="js/vendor/jquery.js"></script>
