--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,9 @@
       <div class="logoutDiv">
         <p class="logout" id="logout">Logout</p>
       </div>
+      <div class="takeMeHomeDiv">
+        <p class="homeButton" id="homeButton">Home</p>
+      </div>
     </div>
   </header>
 
