--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-    <title>
-        Project Name
-    </title>
+    <title>Qpic</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet" rel="stylesheet" type="text/css">
     <link href="css/vendor/font-awesome.css" rel="stylesheet">
@@ -14,42 +12,28 @@
     <link href="css/main.css" rel="stylesheet">
 </head>
 
-
 <body>
     <div class="wrapper">
         <header>
             <div class="innerHeader">
                 <div class="logo">
-                    <p>
-                        Q<span>pic</span>
-                    </p><i class="fa fa-camera"></i>
+                    <p>Q<span>pic</span></p><i class="fa fa-camera"></i>
                 </div>
             </div>
             <div class="social">
                 <i class="fa fa-facebook-square"></i> <i class="fa fa-twitter-square"></i> <i class="fa fa-apple"></i> <i class="fa fa-envelope-o"></i>
             </div>
+            <div class="logoutDiv">
+                <p class="logout" id="logout"> Logout </p>
+            </div>
+
+            <div class="takeMeHomeDiv">
+                <p class="homeButton" id="homeButton"> Home </p>
+            </div>
+
         </header>
-
-  <header>
-    <div class="innerHeader">
-      <div class="logo">
-        <p>Q</p>
-        <i class="fa fa-camera fa-3x"></i>
-      </div>
-      <div class="social">
-        <i class="fa fa-facebook-square"></i>
-        <i class="fa fa-twitter-square"></i>
-        <i class="fa fa-apple"></i>
-        <i class="fa fa-envelope-o"></i>
-      </div>
-      <div class="logoutDiv">
-        <p class="logout" id="logout">Logout</p>
-      </div>
-
     </div>
-    <div class="container">
-
-    </div>
+    <div class="container"></div>
     <!-- VENDOR -->
     <script src="js/vendor/jquery.js"></script>
     <script src="js/vendor/underscore.js"></script>
