REVISED LOGO & DRAFT FOR MAIN.VIEW

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Qpic</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet|Fontdiner Swanky|Aldrich|Electrolize" rel="stylesheet" type="text/css">
     <link href="css/vendor/font-awesome.css" rel="stylesheet">
     <link href="css/vendor/normalize.css" rel="stylesheet">
     <link href="css/vendor/foundation.css" rel="stylesheet">
