Working on single page - trying to pull in post ids

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
  <script src="js/views/main.view.js"></script>
  <script src="js/views/single.view.js"></script>
  <script src="js/views/leaderboard.view.js"></script>
+ <script src="js/views/newpost.view.js"></script>
 
 
  <script src="js/routers/main.router.js"></script>
