Updated all header styling

--- a/app/index.html
+++ b/app/index.html
@@ -17,24 +17,31 @@
     <div class="wrapper">
         <header>
             <div class="innerHeader">
-                <div class="logo">
-                    <p>Q<span>pic</span></p>
+              <div class="logo">
+                  <div class="q">
+                    <p>Q</p>
                     <i class="fa fa-camera"></i>
-                </div>
-            </div>
-            <div class="social">
-                <i class="fa fa-facebook-square"></i>
-                <i class="fa fa-twitter-square"></i>
-                <i class="fa fa-apple"></i>
-                <i class="fa fa-envelope-o"></i>
-            </div>
-            <div class="logoutDiv">
-                <p class="logout" id="logout"> Logout </p>
-            </div>
+                  </div>
+                  <div class="pic">
+                    <p>pic</p>
+                  </div>
 
-            <div class="takeMeHomeDiv">
-                <p class="homeButton" id="homeButton"> Home </p>
-            </div>
+              </div>
+
+              <div class="social">
+                  <i class="fa fa-facebook-square"></i>
+                  <i class="fa fa-twitter-square"></i>
+                  <i class="fa fa-apple"></i>
+                  <i class="fa fa-envelope-o"></i>
+              </div>
+
+              <nav>
+                <ul>
+                  <li class="logout" id="logout"> Logout </li>
+                  <li class="homeButton" id="homeButton"> Home </li>
+                </ul>
+              </nav>
+            </div><!-- end innerHeader -->
 
         </header>
 
