COMMENTED OUT FOR HANDLEBARS IN MAIN.HBS

--- a/app/index.html
+++ b/app/index.html
@@ -41,13 +41,15 @@
                   <li class="homeButton" id="homeButton"> Home </li>
                 </ul>
               </nav>
-            </div><!-- end innerHeader -->
+            </div>
+            <!-- end innerHeader -->
 
 
         </header>
 
       <div class="container"></div>
 
+    </div>
     </div>
 
     <!-- VENDOR -->
@@ -57,7 +59,7 @@
   <script src="js/vendor/backbone.js"></script>
   <script src="js/vendor/cookies.js"></script>
 
-  <!-- TEMPLATES -->
+  <!-- TEMPLATES
   <script src="js/templates.js"></script>
 
   <!-- SETUP FILES -->
