REMOVED COMMENTED OUT FILE

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
   <script src="js/vendor/backbone.js"></script>
   <script src="js/vendor/cookies.js"></script>
 
-  <!-- TEMPLATES
+  <!-- TEMPLATES -->
   <script src="js/templates.js"></script>
 
   <!-- SETUP FILES -->
