--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,6 @@
 
 
     </div>
-    </div>
 
     <!-- VENDOR -->
   <script src="js/vendor/jquery.js"></script>
@@ -61,7 +60,7 @@
   <script src="js/vendor/backbone.js"></script>
   <script src="js/vendor/cookies.js"></script>
 
-  <!-- TEMPLATES
+  <!-- TEMPLATES -->
   <script src="js/templates.js"></script>
 
   <!-- SETUP FILES -->
