Added delete function to single page with response and redirect to home page

--- a/app/index.html
+++ b/app/index.html
@@ -35,11 +35,11 @@
                   <i class="fa fa-envelope-o"></i>
               </div>
 
-              <nav>
+<!--               <nav>
                 <ul>
                   <li class="homeButton" id="homeButton"> Home </li>
                 </ul>
-              </nav>
+              </nav> -->
             </div>
             <!-- end innerHeader -->
 
