ADDED DELETE POSTS IN SOLVED VIEW AND ACCOUNT IN MAIN STYLING ADDED TO MAIN FAVICON CREATED DEFAULT LOGO ADDED

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <link href="css/vendor/normalize.css" rel="stylesheet">
     <link href="css/vendor/foundation.css" rel="stylesheet">
     <link href="css/vendor/font-awesome.css" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico">
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -47,6 +48,7 @@
         </header>
 
         <aside class="sidebar"></aside>
+        <div class="deletePost"></div>
         <div class="container"></div>
 
     </div>
