working on leaderboard

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,9 @@
 
         </header>
 
-        <aside class="sidebar"></aside>
+        <aside class="sidebar">
+          <div class="asideBottom"></div>
+        </aside>
         <div class="deletePost"></div>
         <div class="container"></div>
 
