--- a/app/index.html
+++ b/app/index.html
@@ -46,11 +46,13 @@
 
 
         </header>
+        <div class="sidebarWrapper">
 
-        <aside class="sidebar">
+        <aside class="sidebar"></aside>
           <div class="asideBottom"></div>
-        </aside>
+
         <div class="deletePost"></div>
+        </div><!--end of sidebarWrapper-->
         <div class="container"></div>
 
     </div>
