Added styling to login page

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,18 @@
 <head>
     <title>Qpic</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <!-- FONTS -->
     <link href="http://fonts.googleapis.com/css?family=Philosopher|Raleway|Roboto|Michroma|Sniglet|Fontdiner Swanky|Aldrich|Electrolize" rel="stylesheet" type="text/css">
+
+    <!-- VENDOR STYLESHEETS -->
     <link href="css/vendor/font-awesome.css" rel="stylesheet">
     <link href="css/vendor/normalize.css" rel="stylesheet">
     <link href="css/vendor/foundation.css" rel="stylesheet">
     <link href="css/vendor/font-awesome.css" rel="stylesheet">
     <link rel="icon" href="/favicon.ico">
+
+    <!-- MAIN STYLESHEET -->
     <link href="css/main.css" rel="stylesheet">
 </head>
 
@@ -36,13 +42,7 @@
                   <i class="fa fa-envelope-o"></i>
               </div>
 
-<!--               <nav>
-                <ul>
-                  <li class="homeButton" id="homeButton"> Home </li>
-                </ul>
-              </nav> -->
-            </div>
-            <!-- end innerHeader -->
+            </div> <!-- end innerHeader -->
 
 
         </header>
@@ -86,7 +86,7 @@
   <script src="js/routers/main.router.js"></script>
 
   <!-- MAIN -->
-<script src="js/main.js"></script>
+  <script src="js/main.js"></script>
 
 
 
