leaderboard working throughout

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
         <div class="deletePost"></div>
         </div><!--end of sidebarWrapper-->
         <div class="container"></div>
+        <div class="belowContainer"></div>
 
     </div>
 
