Updated header size

--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,10 @@
     <div class="wrapper">
         <header>
             <div class="innerHeader">
-              <div class="logo">
+              <div class="logoImage">
+                <img src="https://raw.githubusercontent.com/Group-4/Qpic-Logos/master/QpicLogo.png">
+              </div>
+<!--               <div class="logo">
                   <div class="q">
                     <p>Q</p>
                     <i class="fa fa-camera"></i>
@@ -33,7 +36,7 @@
                     <p>pic</p>
                   </div>
 
-              </div>
+              </div> -->
 
               <div class="social">
                   <i class="fa fa-facebook-square"></i>
